Children Routes and Student Module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,9 @@
         <a [routerLink]="['course', idCurso.value]">Course With Id</a>
       </li>
       <li routerLinkActive="active">
+        <a routerLink="/students">Students</a>
+      </li>
+      <li routerLinkActive="active">
         <a routerLink="/form">Form</a>
       </li>
     </ul>
